--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,13 +56,20 @@
 }
 /*#0099ff*/
 /*#1c5480*/
+.contenedor-signin,
+.contenedor-signup {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
 .card-signin {
 	background-image: radial-gradient(#09f 1px, transparent 1px), radial-gradient(#09f 1px, transparent 1px);
 	background-position: 0 0 25px 25px;
 	background-size: 50px 50px;
 	display: flex;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	align-items: center;
 	justify-content: center;
 	margin: 0;
@@ -70,8 +77,8 @@
 }
 .card-body-signin {
 	background-color: #f1f1f1;
+	height: 450px;
 	min-width: 450px;
-	min-height: 450px;
 }
 .card-image-signin {
 	display: flex;
@@ -89,4 +96,28 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
+}
+h3 {
+	margin: 20px 0px;
+	font-size: 27px;
+}
+.form-sign {
+	margin: auto;
+	width: 80%;
+}
+
+@media screen and (max-width: 400px) {
+	.input {
+		width: 250px;
+	}
+
+	.card-body-signin {
+		width: 380px;
+	}
+	.form-sign {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
 }
