--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,14 @@
 @import '~antd/dist/antd.css';
 
-.cl-header {
-	background-color: #ffffff;
-	display: flex;
-	justify-content: flex-end;
-	position: relative;
-	z-index: 50;
-}
+
 .cl-content {
-	margin: 0 16px;
+	margin: 0;
+	background: #fff;
 }
 .cl-content-bg {
-	display: flex;
 	width: 100%;
-	background: #fff;
-	justify-content: center;
-	align-items: center;
-	padding: 24px;
 	min-height: 100vh;
+	padding: 50px;
 }
 .cl-footer {
 	text-align: center;
@@ -104,6 +95,10 @@ h3 {
 .form-sign {
 	margin: auto;
 	width: 80%;
+}
+
+.ant-layout-header {
+    line-height: 0px;
 }
 
 @media screen and (max-width: 400px) {
