--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,20 @@
 @import '~antd/dist/antd.css';
 
-
+#root{
+	height: 100%;
+}
 .cl-content {
 	margin: 0;
 	background: #fff;
+	min-height: auto;
 }
 .cl-content-bg {
 	width: 100%;
 	min-height: 100vh;
 	padding: 50px;
+}
+.cl-layout {
+	height: 100%;
 }
 .cl-footer {
 	text-align: center;
