--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,72 @@
 @import '~antd/dist/antd.css';
 
 body {
-	font-family: 'Open Sans', sans-serif;
-	font-family: 'Roboto', sans-serif;
+	/* font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif; */
+	font-family: 'Raleway', sans-serif;
 }
-
+h1 {
+	font-size: 55px;
+}
+a,
+h1,
+h2 {
+	margin: 0;
+	padding: 0;
+	font-weight: 300;
+}
+h2 {
+	margin-bottom: 20px;
+}
+h4 {
+	font-weight: 600;
+	margin: 0;
+	font-size: 18px;
+}
+.mv-r {
+	animation: moveLeft 1s ease-in;
+}
+.mv-l {
+	animation: moveRight 1s ease-in;
+}
+.mv-u {
+	animation: up 1s ease-in;
+}
+@keyframes moveLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(-100px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+@keyframes moveRight {
+	0% {
+		opacity: 0;
+		transform: translateX(100px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+@keyframes up {
+	0% {
+		opacity: 0;
+		transform: translateY(100px);
+	}
+	100% {
+		opacity: 1;
+		transform: translate(0);
+	}
+}
+.ant-card-head-title {
+	font-weight: 600;
+	color: whitesmoke;
+	font-size: 1.5rem;
+}
 .cl-layout {
 	height: 100%;
 }
@@ -47,9 +109,6 @@ body {
 	align-items: center;
 }
 .card-signin {
-	background-image: radial-gradient(#09f 1px, transparent 1px), radial-gradient(#09f 1px, transparent 1px);
-	background-position: 0 0 25px 25px;
-	background-size: 50px 50px;
 	display: flex;
 	width: 100%;
 	height: 100%;
@@ -59,7 +118,7 @@ body {
 	padding: 0;
 }
 .card-body-signin {
-	background-color: #f1f1f1;
+	background-color: #e7f3ff;
 	height: 450px;
 	min-width: 450px;
 }
@@ -70,10 +129,11 @@ body {
 	align-items: center;
 }
 .image-signin {
-	border-radius: 100px;
+	border-radius: 30%;
 	height: 120px;
 	width: 120px;
-	margin-top: 15px;
+	margin-top: 30px;
+	background: #8bb6fb;
 }
 .card-btn-signin {
 	display: flex;
