--- a/frontend/src/components/Layout/Header/HeaderStyle.scss
+++ b/frontend/src/components/Layout/Header/HeaderStyle.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	justify-content: flex-end;
 	position: relative;
-    z-index: 50;
-    padding: 0 !important;
+	height: 80px !important;
+	z-index: 50;
+	padding: 0 !important;
 }
