--- a/frontend/src/components/shared/CustomCard/CustomCardStyle.scss
+++ b/frontend/src/components/shared/CustomCard/CustomCardStyle.scss
@@ -1,7 +1,7 @@
 .ant-card {
-    border-radius: 2em !important;
+	border-radius: 2em !important;
 
-    .ant-card-head{
-        background: #a3f7bf !important;
-    }
+	.ant-card-head {
+		background: #8bb6fb !important;
+	}
 }
